# apple_static_xcframework_import

./: BUILD.bazel  README.md
MoltenVK.xcframework/: Info.plist
